# photo-album-cropper

./: .gitignore  README.md  config.json  install.bat  main.py  pyproject.toml  requirements.txt  run.bat
src/: __init__.py  color_correction.py  correct_perspective.py  detect_photo.py  gemini_detector.py  utils.py
